# SignChoiceAutoFormula

./: .gitignore  CMakeLists.txt  README.md  bench.sh  build.sh  build.zig  config.h.in  main.c  main.zig
.github/workflows/: build.yml  main.yml
include/: fractions.h
src/: fractions.c  fractions.zig
