cmake_minimum_required(VERSION 3.21)
project(testmath)
option(MEASURE_TIME "measure time" OFF)
if(MEASURE_TIME)
  set(MEASURE_TIME_ENABLED ON)
endif()
configure_file(config.h.in config.h)
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -O3")
include_directories(include)
add_library(fractions STATIC ./src/fractions.c)
add_executable(main main.c)
target_include_directories(main PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
target_link_libraries(main PRIVATE fractions)
